[gd_scene load_steps=2 format=3 uid="uid://d1x2y3z4a5b6c7d8"]

[ext_resource type="Script" path="res://Scripts/UI/MainPassiveTest.gd" id="1_1me3q"]

[node name="MainPassiveTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1me3q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Система пассивных способностей"
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 50)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LearnPassivesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1. Изучить пассивные способности"
custom_minimum_size = Vector2(0, 50)

[node name="OpenPassivesWindowButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "2. Открыть окно пассивных способностей"
custom_minimum_size = Vector2(0, 50)

[node name="TestActivationButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "3. Тест активации/деактивации"
custom_minimum_size = Vector2(0, 50)

[node name="StartBattleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "4. Начать бой (тест в бою)"
custom_minimum_size = Vector2(0, 50)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Нажмите кнопки по порядку для тестирования системы"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Закрыть"
custom_minimum_size = Vector2(0, 40)
